unstyled reset view button with flickering issue

--- a/departementales-2015/app/public/css/app.css
+++ b/departementales-2015/app/public/css/app.css
@@ -82,6 +82,10 @@ html, body {
   background: #888;
 }
 
+.leaflet-control-resetview {
+  display: none;
+}
+
 /* navigation */
 
 .nav {
